Fortran/IBM/execute/F2008/intrinsics/error/unit_tests/erfc_scaled03a.scenario
#BEGINSCENARIO
#BEGINDOC
#NAME=F2008/intrinsics/error/unit_tests/erfc_scaled03a.scenario
#FEATURE = F2008 ERFC_SCALED intrinsic
#DATE    = 20110501
#TEST_TYPE=unit
#ENDDOC

#BEGINCONTROL

#CMD       = F_COMPILE
#INPUT     = $(tcasedir)erfc_scaled03a.f
#OUTPUT    = erfc_scaled03a$(OBJ)
#ENDCMD

#CMD       = F_LINK
#INPUT     = erfc_scaled03a$(OBJ)
#OUTPUT    = erfc_scaled03a$(EXE)
#ENDCMD

#CMD       = RUN
#INPUT     = erfc_scaled03a$(EXE)
#ENDCMD

#ENDCONTROL
#ENDSCENARIO
